
                     ngIRCd - Next Generation IRC Server

                      (c)2001-2004 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - Enhanced the "test suite": please have a look at src/testsuite/README!

ngIRCd 0.8.0 (2004-06-26)

  - Fixed wrong buffer size calculation for results of the resolver.

  ngircd 0.8.0-pre2 (2004-05-16)
  - Enhanced logging to console when running in "no-detached mode": added
    PID and log messages of resolver sub-processes.
  - Fixed host name lookups when using IDENT user lookups.
  - "make clean" and "make maintainer-clean" remove more files now.

  ngIRCd 0.8.0-pre1 (2004-05-07)
  - Two new configuration options: "ChrootDir" and "MotdPhrase", thanks to
    Benjamin Pineau <ben@zouh.org>. Now you can force the daemon to change
    its root and working directory to something "safe". MotdPhrase is used
    to define an "MOTD string" instead of a whole file, useful if the
    "real" MOTD file would be outside the "jail".
  - INVITE- and BAN-lists become synchronized between IRC+ servers when
    establishing new connections, if the peer supports this as well.
  - Reorganized autogen.sh and configure scripts.
  - Fixed a wrong assert() which could cause the daemon to exit spuriously
    when closing down connections.
  - Better logging of decompression errors returned by zlib.
  - Servers other than the destination server didn't clean up the invite
    list of an "invite-only" channel properly when an INVITE'd user joined.
  - Changed the reply of the MODE command to match the syntax of the
    original ircd exactly: the unnecessary but missing ":" before the last
    parameter has been added.
  - Fixed TRACE: don't output "Serv" lines for ourself; display more info.